# ASyH

./: .gitignore  Jenkinsfile  LICENSE  MANIFEST.in  README.md  README.org  launcher.py  produce_metadata_json.py  pyproject.toml  requirements.txt  run_asyh_app.py
ASyH/: App.py  __init__.py  abstract_pipeline.py  ctabgan_synthesizer.py  data.py  dataerror.py  dispatch.py  forest_data_prep.py  hook.py  metadata.py  model.py  models.py  pipeline.py  pipelines.py  report.j2  report.py  run_ctabgan_pipe.py  run_tvae_pipe.py  transformer_ctabgan.py  utils.py
ASyH/metrics/: __init__.py  anonymity.py  bivariate_statistics.py  sdv_metrics.py  univariate_statistics.py
examples/: Kaggle_Sirio_Libanes-16features.json  Kaggle_Sirio_Libanes-16features.xlsx  application.py  launcher.py  metadata_tiny_ukbb_0to1k.json  run_app.py  sdgym-demo.py  tiny_ukbb_subset_0to1000rows.csv
test/: test_models.py  testdata.csv
tests/: test_data.py  test_metadata.py  test_models.py  test_report.py
tests/metrics/: test_sdv_metrics.py
