[build-system]
requires = ['setuptools', 'wheel']

[project]
name = 'ASyH'
version = '0.0.1'
dependencies = [
    'sdv',
    'openpyxl',
    'python-magic',
    'gower',
]

[tool.setuptools.packages.find]
exclude = ['tests']

[project.optional-dependencies]
tests = [
    'flake8',
    'pytest',
    'pytest-cov',
]